# mle-career-path

./: .gitignore  .python-version  Dockerfile  LICENSE  README.md  Untitled.ipynb  ml_requirements.txt  pyproject.toml  test.py  text.txt
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
AWS/: README.md
Airflow/: README.md
Articles/: README.md
DS_Trend/: Target_Companies.xlsx
DataStructure_Algorithm/: README.md  leetcode_105_M.py  leetcode_116_M.py
DataStructure_Algorithm/General_Concept/: LinkedList.md
DataStructure_Algorithm/Java/: README.md
DataStructure_Algorithm/Python/: .python-version  BinarySearch.py  BinaryTree.py  Dockerfile  Graph.py  Heap.py  LearnQueue.py  LinkedList.py  MergeSort.py  Queue.py  QueueStack.py  QuickSort.py  README.md  Recursion.py  SelectionSort.py  Untitled.ipynb  binarysearch1.py  bubblesort.py  dfs.py  experiment.py  helper.sh  leecode_328.py  leecode_328_M.py  leetcode_101_E.py  leetcode_102_M.py  leetcode_103_M_.py  leetcode_1041_M.py  leetcode_1047_E.py  leetcode_104_E.py  leetcode_1051_E.py  leetcode_105_M.py  leetcode_106_M.py  leetcode_1086_E.py  leetcode_1089_E.py  leetcode_108_E.py  leetcode_1094_M.py  leetcode_1119_E.py  leetcode_112_E.py  leetcode_113_M.py  leetcode_114_M.py  (+152 more)
Database/SQL Query/: EfficientSQL.md  Questions.md
Deep Learning/: LSTM.md
Docker/: README.md
Docker/Docker_TensorFlow/: README.md  requirements.txt
Docker/Yaml/: README.md
Docs/: README.md
File System and Shell/: READ.md
Helm/: README.md
Helm/Api_Base/: .dockerignore  Dockerfile  push2ecr.sh  requirements.txt
Helm/flask/: flask.yaml  nginx-ingress.yaml
Helm/yc-example-chart/: Chart.yaml  values.yaml
Interview/: Facebook.md  Paypal.md  README.md  company.py  test.py
Java/: Array.md  README.md
Kubernetes/: README.md
MLOps/: README.md
MLOps/Prometheus/: helper.sh  prometheus.yml
Others/: GitHubNote.md
Paper/: README.md
Product/: README.md
RegularML/: README.md
SQL/: DatabaseKonwledge.md  EfficientSQL.md  Questions.md  Syntax.md  leetcode_21.py  leetcode_344.py
Shell/: READ.md
demo/: .python-version  Dockerfile  docker-compose.yml  entrypoint.sh  irismodel.pkl  main.py  model.py  requirements.txt
dsa/: code-dev.ipynb
machine-learning/: Pipfile
(+76 files in other folders)
